<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.longfeizeng.smartapp.view.ContentActivity">
    <item
        android:id="@+id/info_settings"
        android:orderInCategory="80"
        android:title="@string/info_setting"
        app:showAsAction="never" />
    <item
        android:id="@+id/camera_settings"
        android:orderInCategory="80"
        android:title="@string/camera_setting"
        app:showAsAction="never" />
    <item
        android:id="@+id/app_settings"
        android:orderInCategory="80"
        android:title="@string/app_setting"
        app:showAsAction="never" />
    <item
        android:id="@+id/notify_settings"
        android:orderInCategory="80"
        android:title="@string/notify_setting"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="80"
        android:title="@string/supervise_setting"
        app:showAsAction="never" />

</menu>
